--- a/index.html
+++ b/index.html
@@ -410,9 +410,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</a>
 					</div>
 					<div class="agile_gallery_grid">
-						<a title="" href="images/6.jpg">
+						<a title="" href="images/6.JPG">
 							<div class="agile_gallery_grid1">
-								<img src="images/6.jpg" alt=" " class="img-responsive" />
+								<img src="images/6.JPG" alt=" " class="img-responsive" />
 							</div>
 						</a>
 					</div>
