--- a/index.html
+++ b/index.html
@@ -433,9 +433,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</a>
 					</div>
 					<div class="agile_gallery_grid">
-						<a title="" href="images/9.jpg">
+						<a title="" href="images/9.JPEG">
 							<div class="agile_gallery_grid1">
-								<img src="images/9.jpg" alt=" " class="img-responsive" />
+								<img src="images/9.JPEG" alt=" " class="img-responsive" />
 							</div>
 						</a>
 					</div>
