--- a/index.html
+++ b/index.html
@@ -373,9 +373,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<div class="w3ls_gallery_grids">
 				<div class="col-md-4 w3_agile_gallery_grid">
 					<div class="agile_gallery_grid">
-						<a title="" href="images/1.jpg">
+						<a title="" href="images/1.JPEG">
 							<div class="agile_gallery_grid1">
-								<img src="images/1.jpg" alt=" " class="img-responsive" />
+								<img src="images/1.JPEG" alt=" " class="img-responsive" />
 							</div>
 						</a>
 					</div>
@@ -387,41 +387,41 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						</a>
 					</div>
 					<div class="agile_gallery_grid">
-						<a title=" " href="images/3.jpg">
+						<a title=" " href="images/3.JPEG">
 							<div class="agile_gallery_grid1">
-								<img src="images/3.jpg" alt=" " class="img-responsive" />
+								<img src="images/3.JPEG" alt=" " class="img-responsive" />
 							</div>
 						</a>
 					</div>
 				</div>
 				<div class="col-md-4 w3_agile_gallery_grid">
 					<div class="agile_gallery_grid">
-						<a title="" href="images/4.jpg">
+						<a title="" href="images/4.JPEG">
 							<div class="agile_gallery_grid1">
-								<img src="images/4.jpg" alt=" " class="img-responsive" />
+								<img src="images/4.JPEG" alt=" " class="img-responsive" />
 							</div>
 						</a>
 					</div>
 					<div class="agile_gallery_grid">
-						<a title="" href="images/5.jpg">
+						<a title="" href="images/5.JPEG">
 							<div class="agile_gallery_grid1">
-								<img src="images/5.jpg" alt=" " class="img-responsive" />
+								<img src="images/5.JPEG" alt=" " class="img-responsive" />
 							</div>
 						</a>
 					</div>
 					<div class="agile_gallery_grid">
-						<a title="" href="images/6.jpg">
+						<a title="" href="images/6.JPEG">
 							<div class="agile_gallery_grid1">
-								<img src="images/6.jpg" alt=" " class="img-responsive" />
+								<img src="images/6.JPEG" alt=" " class="img-responsive" />
 							</div>
 						</a>
 					</div>
 				</div>
 				<div class="col-md-4 w3_agile_gallery_grid">
 					<div class="agile_gallery_grid">
-						<a title="" href="images/7.jpg">
+						<a title="" href="images/7.JPEG">
 							<div class="agile_gallery_grid1">
-								<img src="images/7.jpg" alt=" " class="img-responsive" />
+								<img src="images/7.JPEG" alt=" " class="img-responsive" />
 							</div>
 						</a>
 					</div>
