--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				</div>
 				<div class="about-top">
 					<h3 class="subheading-agileits-w3layouts">Quelques mots</h3>
-					<p class="para-agileits-w3layouts">Bienvenu dans mon premier site internet, vous trouvez toutes les informations sur moi, c'est en quelques sortes mon c.v, merci pour votre visite. </p>
+					<p class="para-agileits-w3layouts">Bienvenue dans mon premier site web, vous trouvez toutes les informations sur moi, c'est en quelques sortes mon c.v, merci pour votre visite. </p>
 				</div>
 			</div>
 			<div class="col-md-4 about-left-agileits">
@@ -138,7 +138,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<ul>
 						<li><span>Nom</span>: Adel LARABI</li>
 						<li><span>Date de naissance</span>: 03/03/1998</li>
-						<li><span>Situation</span>: celibataire </li>
+						<li><span>Situation</span>: célibataire </li>
 						<li><span>Email</span>: <a href="mailto:adellarabi035@gmail.com">adellarabi035@gmail.com</a></li>
 						<li><span>Tel</span>: (+213) 5 60 29 20 61</li>
 						<li><span>Website</span>: <a href="https://adellarabi.github.io">adellarabi.github.io</a></li>
