--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 				<div class="header-bottom-agileits">
 					<div class="w3-logo">
-						<h1><a href="index.html">C.V<span class="sub-logo">Curriculum vitae</span></a></h1>
+						<h1><a href="index.html">C.V<span class="sub-logo">C.V</span></a></h1>
 					</div>
 					<!-- navigation -->
 					<nav class="navbar navbar-default shift">
